kodexplorer/kodexplorer-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: confluence
  namespace: default
spec:
  ports:
   - name: http
     port: 8090
     targetPort: 8090
     protocol: TCP
#   - name: https
#     port: 8000
#     targetPort: 8000
#     protocol: TCP
  selector:
    app: cheese
    task: confluence
